AR-7: Added the artifact pusher class

--- a/src/main/resources/io/iktech/jenkins/plugins/artifactor/Messages.properties
+++ b/src/main/resources/io/iktech/jenkins/plugins/artifactor/Messages.properties
@@ -1,5 +1,6 @@
 ArtifactVersionPublisher_DescriptorImpl_DisplayName=Send Artifact Version To Artifactor
 ArtifactVersionRetriever_DescriptorImpl_DisplayName=Retrieve artifact version for stage
+ArtifactVersionPusher_DescriptorImpl_DisplayName=Push Artifact Version to the next stage in the flow
 ArtifactName_DescriptorImpl_DisplayName=Artifact Name
 Artifact_DescriptorImpl_errors_missingName=Please set an artifact name
 Artifact_DescriptorImpl_errors_missingStage=Please set the deployment stage
